# conventional-commits-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_ANALYSIS.md  Cargo.toml  LICENSE  README.md  VERSION_AUDIT_REPORT.md  VERSION_MANAGEMENT.md  index.html  install.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  script.py  setup.cfg  setup.py  tox.ini  uninstall.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  docs.yml  greetings.yml  label.yml  labeler.yml  page.yml  stale.yml  summary.yml  tests.yml  type-check.yml
community/code-of-conduct/: index.html
community/security/: index.html
docs/: 404.html  index.html  index.md  sitemap.xml
docs/community/: changelog.md  code-of-conduct.md  contributing.md  security.md
docs/community/changelog/: index.html
docs/community/code-of-conduct/: index.html
docs/community/contributing/: index.html
docs/community/security/: index.html
docs/home/: commit-types.md  quick-start.md
docs/home/commit-types/: index.html
docs/home/quick-start/: index.html
docs/search/: search_index.json
docs/user-guide/: faq.md  installation.md  quick-start.md  usage.md
docs/user-guide/faq/: index.html
docs/user-guide/installation/: index.html
docs/user-guide/quick-start/: index.html
docs/user-guide/usage/: index.html
home/commit-types/: index.html
scripts/: bump_version.py  changelog_utils.py  common_logging.py  extract_current_changelog.py  generate_changelog.py  install_local.sh  manage_env.sh  setup_venv.bat  setup_venv.sh  shared_utils.py  tox-mise.sh
search/: search_index.json
src/: main.rs
src/ccg/: __init__.py  __main__.py  _version.py  cache.py  cli.py  config.py  core.py  git.py  git_strategies.py  logging.py  platform_utils.py  progress.py  repository.py  utils.py
src/ccg/common/: __init__.py  config.py  decorators.py  helpers.py
src/ccg/core/: __init__.py  interactive.py  operations.py  workflows.py
src/ccg/git/: __init__.py  operations.py
src/ccg/ui/: __init__.py  display.py  input.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_workflow.py
tests/unit/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_core.py  test_git.py  test_git_error_categorization.py  test_git_strategies.py  test_git_strategies_resource_leak.py  test_lazy_loading.py  test_logging.py  test_main.py  test_platform_utils.py  test_platform_utils_security.py  test_progress.py  test_repository.py  test_spinner_overlap.py  test_utils.py  test_validation_properties.py
user-guide/faq/: index.html
user-guide/quick-start/: index.html
user-guide/usage/: index.html
