[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conventional-commits-generator"
version = "2.2.5"
description = "Interactive CLI tool for creating standardized commit messages following conventional commits"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Egydio Bolonhezi", email = "egydiobolonhezi@gmail.com"}
]
keywords = ["git", "commit", "conventional-commits", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "prompt_toolkit >= 3.0.20"
]

[project.optional-dependencies]
dev = [
    "pre-commit >= 3.5.0",
    "prompt_toolkit >= 3.0.20"
]
test = [
    "pytest >= 7.4.0",
    "pytest-cov >= 4.1.0",
    "pytest-mock >= 3.11.0",
    "hypothesis >= 6.82.0"
]

[project.urls]
Homepage = "https://github.com/EgydioBNeto/conventional-commits-generator"
Repository = "https://github.com/EgydioBNeto/conventional-commits-generator"
Issues = "https://github.com/EgydioBNeto/conventional-commits-generator/issues"
Changelog = "https://github.com/EgydioBNeto/conventional-commits-generator/releases"

[project.scripts]
ccg = "ccg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ccg"]

[tool.hatch.version]
path = "src/ccg/__init__.py"
